# faster-whisper-speech-to-text

./: MacOS_dependencies.sh  app.py  pyproject.toml  requirements.txt
