[tool.poetry]
name = "speech-to-text"
version = "1.0.0"
description = "a speech to text application for voice command"
authors = ["Lama Alosaimi <lamo.boos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
soundfile = "^0.12.1"
sounddevice = "^0.4.6"
torch = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
